# NLP-Fake-News-Colombia

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  colombiacheck_recon.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/: DATASHEET.md  DATA_STATEMENT.md  HUB_MODEL_CARD.md  MODEL_CARD.md
notebooks/: 01_EDA.ipynb  02_MODELING.ipynb
src/fake_news_co/: __init__.py  acquisition.py  features.py  figures.py  model.py  paths.py  push_to_hub.py
tests/: test_features.py  test_model.py  test_recon.py
