[project]
name = "nlp-fake-news-colombia"
version = "0.1.0"
description = "NLP verdict classification over ColombiaCheck fact-checks, with model cards, datasheets and data statements."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "Daniel Felipe Sacristán Ávila" }]
keywords = ["nlp", "fact-checking", "spanish", "beto", "misinformation", "colombia"]

dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.13",
    "lxml>=5.2",
    "pandas>=2.2",
]

[project.optional-dependencies]
# Exploratory data analysis (Phase 2 notebook). pandas is also a base
# dependency; it is repeated here so `pip install -e ".[eda]"` is self-describing.
eda = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "seaborn>=0.13",
    "missingno>=0.5",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",  # t-SNE (sklearn.manifold.TSNE) for word-vector plots
    "gensim>=4.3.3",      # Word2Vec (>=4.3.3 supports numpy 2 / scipy 1.13+)
    "nltk>=3.9",          # Spanish tokenization + stopwords for the Word2Vec EDA
    "transformers>=4.44", # BETO tokenizer only (subword-length check); no torch here
    "ipykernel>=6.29",
]
# NLP training stack — added in Phase 3, kept optional so the recon/data
# tooling installs without pulling heavy deep-learning wheels.
nlp = [
    "torch>=2.3",
    "transformers>=4.44",
    "datasets>=2.20",
    "scikit-learn>=1.5",
    "accelerate>=0.33",
    "gensim>=4.3.3",
    "imbalanced-learn>=0.12",  # SMOTE for the TF-IDF baseline variant
]
# Streamlit demo — Phase 4. Self-sufficient: the app loads the fine-tuned
# model from the HF Hub, so it needs the inference stack too.
app = [
    "streamlit>=1.37",
    "torch>=2.3",
    "transformers>=4.44",
    "pandas>=2.2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[project.urls]
Repository = "https://github.com/POLUX89/NLP-Fake-News-Colombia"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint.per-file-ignores]
# Exploratory notebooks: allow patterns that are idiomatic in EDA but flagged by
# default — imports used further down (F401), imports after code (E402), and
# compact one-liners / semicolon-separated statements (E701-E703).
"*.ipynb" = ["F401", "E402", "E701", "E702", "E703"]

[tool.pytest.ini_options]
testpaths = ["tests"]
